# dih-voucher

./: .gitignore  Dockerfile  README.md  app.wsgi  default.conf  entrypoint.sh  requirements.txt  setup.cfg  setup.py
dih/: app.py  database.py  defaults.py  models.py
dih/templates/: 500.html  base.html  index.html
k8s/: README.md  deploy.yaml  ingress.yaml  pvc.yaml  service.yaml
