[metadata]
name = dih 
summary = DIH Vouchers 
description-file = 
	README.md
author = Enol Fernandez 
author-email = enol.fernandez@egi.eu
home-page = 
classifier = 
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = 
    dih	
